--- a/package.json
+++ b/package.json
@@ -5,12 +5,19 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "radium": "^0.26.2",
+    "randomcolor": "^0.6.2",
     "react": "^18.1.0",
+    "react-animations": "^1.0.0",
     "react-dom": "^18.1.0",
+    "react-hooks-global-state": "^2.0.0-rc.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-scroll-trigger": "^0.6.14",
+    "react-transition-group": "^4.4.2",
     "react-tsparticles": "^2.0.6",
     "styled-components": "^5.3.5",
     "tslib": "^2.4.0",
